# unconstrained_mpc_controller

./: CMakeLists.txt  README.md  package.xml  plugin_unconstrained_mpc_controller.xml
include/unconstrained_mpc_controller/: eigen_vector_cmd_interface_bridge.hpp  hw_interfaces_helper.hpp  mpc_matrix_converter.hpp  mpc_vectors_manipulator.hpp  realtime_publisher_wrapper.hpp  state_interface_eigen_vector_bridge.hpp  unconstrained_mpc_controller.hpp
include/unconstrained_mpc_controller/types/: mpc_definitions.hpp  mpc_matrices.hpp  types.hpp
scripts/: future_refs_publisher.py  trajectory_example.csv
src/: eigen_vector_cmd_interface_bridge.cpp  mpc_matrix_converter.cpp  mpc_vectors_manipulator.cpp  state_interface_eigen_vector_bridge.cpp  unconstrained_mpc_controller.cpp  unconstrained_mpc_controller_params.yaml
test/: test_hw_ifaces_eigen_vec_bridges.cpp  test_hw_interfaces_helper.cpp  test_load_unconstrained_mpc_controller.cpp  test_mpc_matrix_converter.cpp  test_mpc_vectors_manipulator.cpp  test_unconstrained_mpc_controller.cpp
test/config/: test_unconstrained_mpc_controller_params.yaml
